# octopus-energy

./: .gitignore  .travis.yml  LICENSE  changelog.md  pyproject.toml  readme.md  tox.ini
.github/workflows/: python-publish.yml
octopus_energy/: __init__.py  client.py  exceptions.py  mappers.py  models.py  rest_client.py
tests/: __init__.py  test_client.py  test_e2e.py  test_exceptions.py  test_mappers.py  test_models.py  test_rest_client.py
tests/fixtures/: account_response.json  business_tariff_renewal_request.json  business_tariff_renewal_response.json  consumption_no_results_response.json  consumption_response.json  create_account_request.json  create_account_response.json  create_quote_request.json  create_quote_response.json  get_electricity_meter_points.json  get_product_response.json  get_products_response.json  get_tariff_response.json
tests/mapping_results/: account_mapping.json  tariff_rate_mapping.json
