[tool.poetry]
name = "octopus-energy"
version = "0.1.0"
description = "Python client for the Octopus Energy RESTful API"
authors = ["Mark Allanson <mark@allanson.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.25.1"
python-dateutil = "^2.8.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
requests-mock = "^1.8.0"
black = "^20.8b1"
flake8 = "^3.8.4"
tox = "^3.20.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py37']
